--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@ DATABASE_URL=postgresql://cross_user:WRSUDLVfNNTQ1YpScb4xRHTKFTTaBdZ5@dpg-cvosqb
 FLASK_SECRET_KEY=your_secret
 ENCRYPTION_KEY=your_fernet_key
 
+# Amazon SES用（SMTP設定）
+SES_SMTP_USER=AKIAR3XG7ZYHKX3E64O6
+SES_SMTP_PASS=BNjAb9dmLGVRrxA2FiBbZ6kzOav9Uk2kuc4fELsTVfON
+SES_FROM_EMAIL=reosai24@gmail.com
