--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,11 @@ Flask-SQLAlchemy
 Flask-Login
 cryptography
 pandas
+pandas-ta
 yfinance
 psycopg2-binary
 flask_limiter
-python-dotenv 
+python-dotenv
 jpholiday
 pytz
+sendgrid
